--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--Firebase-->
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -11,12 +13,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <!-- JQuery -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
 
     <!--Import boostrap-->
     <link
@@ -31,7 +27,7 @@
   </head>
 
   <!--Main Body of App-->
-  <body>
+  <body id="background">
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="header">The Savvy Traveler</h1>
@@ -61,14 +57,29 @@
     <div id="youTubeArea"></div>
     <div id="yelpArea"></div>
     <div id="listArea"></div>
-
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
       $(document).ready(function() {
         //FIREBASE
+        var firebaseConfig = {
+          apiKey: "AIzaSyDv9dMSDCor976Qup3qF1USq3dSp14_o2E",
+          authDomain: "first-group-project-4f015.firebaseapp.com",
+          databaseURL: "https://first-group-project-4f015.firebaseio.com",
+          projectId: "first-group-project-4f015",
+          storageBucket: "first-group-project-4f015.appspot.com",
+          messagingSenderId: "1061347447826",
+          appId: "1:1061347447826:web:95b80b9ddc87a63ddd74cb",
+          measurementId: "G-3TR0M63K7P"
+        };
+
+        //Firebase initialize
+        firebase.initializeApp(firebaseConfig);
 
         //Initial values
+
         var rating = "";
         var restaurantName = "";
         var cityName = "";
@@ -81,6 +92,72 @@
             .val()
             .trim();
           console.log(cityName);
+
+          var myurl =
+            "https://api.yelp.com/v3/businesses/matches?term=" +
+            cityName +
+            "&match_threshold=none&limit=10";
+
+          $.ajax({
+            url: myurl,
+            method: "GET",
+            dataType: "jsonp",
+            data: { term: "restaurant", city: "irvine" } // callback is not necessary
+          }).then(function(response) {
+            // Grab the results from the API JSON return
+            var totalresults = data.total;
+            // If our results are greater than 0, continue
+            if (totalresults > 0) {
+              // Display a header on the page with the number of results
+
+              // Itirate through the JSON array of 'businesses' which was returned by the API
+              $.each(data.businesses, function(i, item) {
+                // Store each business's object in a variable
+                var id = item.id;
+                var alias = item.alias;
+                var phone = item.display_phone;
+                var image = item.image_url;
+                var name = item.name;
+                var rating = item.rating;
+                var reviewcount = item.review_count;
+                var address = item.location.address1;
+                var city = item.location.city;
+                var state = item.location.state;
+                var zipcode = item.location.zip_code;
+                // Append our result into our page
+                $("#yelpArea").append(
+                  '<div id="' +
+                    id +
+                    '" style="margin-top:50px;margin-bottom:50px;"><img src="' +
+                    image +
+                    '" style="width:200px;height:150px;"><br>We found <b>' +
+                    name +
+                    "</b> (" +
+                    alias +
+                    ")<br>Business ID: " +
+                    id +
+                    "<br> Located at: " +
+                    address +
+                    " " +
+                    city +
+                    ", " +
+                    state +
+                    " " +
+                    zipcode +
+                    "<br>The phone number for this business is: " +
+                    phone +
+                    "<br>This business has a rating of " +
+                    rating +
+                    " with " +
+                    reviewcount +
+                    " reviews.</div>"
+                );
+              });
+            } else {
+              // If our results are 0; no businesses were returned by the JSON therefor we display on the page no results were found
+              $("#yelpArea").append("<h5>We discovered no results!</h5>");
+            }
+          });
         });
       });
     </script>
