--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
   <div id="yelpArea"></div>
   <div id="youTubeArea"></div>
   <iframe src=""></iframe>
-  <h3>Video Title</h3>
-  <p class="description">Video Description</p>
 
   <div id="itineraryArea"></div>
   <!-- JQuery -->
@@ -56,6 +54,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
     $(document).ready(function () {
+$('iframe').hide();
+
       //FIREBASE
       var firebaseConfig = {
         apiKey: "AIzaSyDv9dMSDCor976Qup3qF1USq3dSp14_o2E",
@@ -82,6 +82,7 @@
           .val()
           .trim();
 
+          $('iframe').show();
 
         $.ajax({
           url:
@@ -169,8 +170,8 @@
           console.log(response);
 
           $('iframe').attr('src', 'https://www.youtube.com/embed/' + response.items[0].id.videoId);
-          $('h3').text(response.items[0].snippet.title);
-          $('.description').text(response.items[0].snippet.description);
+          $("#youTubeArea").append("<h3>" + response.items[0].snippet.title + "</h3>")
+          .append("<p>" + response.items[0].snippet.description + "</p>");
 
         });
       });
