--- a/index.html
+++ b/index.html
@@ -46,139 +46,221 @@
   <div id="youTubeArea"></div>
   <iframe src=""></iframe>
 
-  <div id="itineraryArea"></div>
-  <!-- JQuery -->
-  <script src="https://code.jquery.com/jquery.js"></script>
+  <div id="itineraryArea" class="container">
 
-  <!--JavaScript at end of body for optimized loading-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script>
-    $(document).ready(function () {
-$('iframe').hide();
+    <div class="row">
 
-      //FIREBASE
-      var firebaseConfig = {
-        apiKey: "AIzaSyDv9dMSDCor976Qup3qF1USq3dSp14_o2E",
-        authDomain: "first-group-project-4f015.firebaseapp.com",
-        databaseURL: "https://first-group-project-4f015.firebaseio.com",
-        projectId: "first-group-project-4f015",
-        storageBucket: "first-group-project-4f015.appspot.com",
-        messagingSenderId: "1061347447826",
-        appId: "1:1061347447826:web:95b80b9ddc87a63ddd74cb",
-        measurementId: "G-3TR0M63K7P"
-      };
+      <div class="col-md-12">
 
-      //Firebase initialize
-      firebase.initializeApp(firebaseConfig);
+        <div class="card text-white border-danger mb-4">
+          <h5 class="card-header bg-danger">Current Itinerary</h5>
+          <div class="card-body text-danger">
+            <table class="table table-sm table-hover" id='itinerary-table'>
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col">Restaurant</th>
+                  <th scope="col">Phone Number</th>
+                  <th scope="col">Address</th>
+                  <th scope="col">City</th>
+                  <th scope="col">State</th>
+                  <th scope="col">Zip Code</th>
+                  <th scope="col">Delete</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('iframe').hide();
+
+        //FIREBASE
+        var firebaseConfig = {
+          apiKey: "AIzaSyDv9dMSDCor976Qup3qF1USq3dSp14_o2E",
+          authDomain: "first-group-project-4f015.firebaseapp.com",
+          databaseURL: "https://first-group-project-4f015.firebaseio.com",
+          projectId: "first-group-project-4f015",
+          storageBucket: "first-group-project-4f015.appspot.com",
+          messagingSenderId: "1061347447826",
+          appId: "1:1061347447826:web:95b80b9ddc87a63ddd74cb",
+          measurementId: "G-3TR0M63K7P"
+        };
+
+        //Firebase initialize
+        firebase.initializeApp(firebaseConfig);
 
 
-      //Capture Button Click
-      $("#submitBtn").on("click", function (event) {
-        event.preventDefault();
+        //Capture Button Click
+        $("#submitBtn").on("click", function (event) {
+          event.preventDefault();
 
-        $("#yelpArea").html("");
+          $("#yelpArea").html("");
 
-        cityName = $("#city-input")
-          .val()
-          .trim();
+          cityName = $("#city-input")
+            .val()
+            .trim();
 
           $('iframe').show();
 
-        $.ajax({
-          url:
-            "https://cors-anywhere.herokuapp.com/https://api.yelp.com/v3/businesses/search",
-          method: "GET",
-          error: function (error) {
-            console.log("error", error);
-          },
-          headers: {
-            Authorization:
-              "Bearer 777OVHyUQXu4MD9WPwXQ3dub9jGslCwGt185TfYEQF6JoBa7tr7kjVe7OvbcNzwp2mY8k3JkODi2curLYOzJsG5dKxmQD8SzDYABjKEzUGC8i3Bk4vXHaU6P5G5DXnYx"
-          },
-          dataType: "json",
-          data: { term: "restaurant", location: cityName, limit: "5" }
+          $.ajax({
+            url:
+              "https://cors-anywhere.herokuapp.com/https://api.yelp.com/v3/businesses/search",
+            method: "GET",
+            error: function (error) {
+              console.log("error", error);
+            },
+            headers: {
+              Authorization:
+                "Bearer 777OVHyUQXu4MD9WPwXQ3dub9jGslCwGt185TfYEQF6JoBa7tr7kjVe7OvbcNzwp2mY8k3JkODi2curLYOzJsG5dKxmQD8SzDYABjKEzUGC8i3Bk4vXHaU6P5G5DXnYx"
+            },
+            dataType: "json",
+            data: { term: "restaurant", location: cityName, limit: "5" }
 
 
-          // callback is not necessary
-        }).then(function (response) {
+            // callback is not necessary
+          }).then(function (response) {
 
-          console.log(response);
+            console.log(response);
 
-          // Grab the results from the API JSON return
-          var totalresults = response.total;
-          // If our results are greater than 0, continue
-          if (totalresults > 0) {
-            // Display a header on the page with the number of results
+            // Grab the results from the API JSON return
+            var totalresults = response.total;
+            // If our results are greater than 0, continue
+            if (totalresults > 0) {
+              // Display a header on the page with the number of results
 
-            // Itirate through the JSON array of 'businesses' which was returned by the API
-            $.each(response.businesses, function (i, item) {
-              // Store each business's object in a variable
-              var phone = item.display_phone;
-              var image = item.image_url;
-              var name = item.name;
-              var rating = item.rating;
-              var reviewcount = item.review_count;
-              var address = item.location.address1;
-              var city = item.location.city;
-              var state = item.location.state;
-              var zipcode = item.location.zip_code;
-              // Append our result into our page
-              $("#yelpArea").append(
-                '<div id="yelpInfo" style="margin-top:50px;margin-bottom:50px;"><img src="' +
-                image +
-                '" style="width:200px;height:150px;"><br>We found <b>' +
-                name +
-                "</b><br> Located at: " +
-                address +
-                " " +
-                city +
-                ", " +
-                state +
-                " " +
-                zipcode +
-                "<br>The phone number for this business is: " +
-                phone +
-                "<br>This business has a rating of " +
-                rating +
-                " with " +
-                reviewcount +
-                " reviews.</div>"
-              );
-            });
-          } else {
-            // If our results are 0; no businesses were returned by the JSON therefor we display on the page no results were found
-            $("#yelpArea").append("<h5>We discovered no results!</h5>");
-          }
+              // Itirate through the JSON array of 'businesses' which was returned by the API
+              $.each(response.businesses, function (i, item) {
+                // Store each business's object in a variable
+
+                var restaurantDiv = $("<div>")
+                  .addClass("restaurant")
+                  .attr("name-val", item.name)
+                  .attr("phone-val", item.display_phone)
+                  .attr("address-val", item.location.address1)
+                  .attr("city-val", item.location.city)
+                  .attr("state-val", item.location.state)
+                  .attr("zip-val", item.location.zip_code);
+                var image = $("<img>");
+                image.attr("src", item.image_url)
+                  .addClass("image")
+                  .attr("style", "width:200px; height:150px; margin-top:50px");
+                var name = $("<p>")
+                  .addClass("name")
+                  .html("We found " + item.name.bold());
+                var address = $("<p>")
+                  .addClass("address")
+                  .attr("style", "margin-top:-15px")
+                  .html(item.location.address1 + " " + item.location.city + " " + item.location.state + " " + item.location.zip_code);
+                var phone = $("<p>")
+                  .addClass("phone")
+                  .attr("style", "margin-top:-15px")
+                  .html("The phone number for this business is: " + item.display_phone);
+                var ratingWithReviewCount = $("<p>")
+                  .addClass("ratingWithReviewCount")
+                  .attr("style", "margin-top:-15px")
+                  .html("This business has a rating of " + item.rating + " with " + item.review_county + " reviews.");
+
+                restaurantDiv.append(image);
+                restaurantDiv.append(name);
+                restaurantDiv.append(address);
+                restaurantDiv.append(phone);
+                restaurantDiv.append(ratingWithReviewCount);
+                $("#yelpArea").append(restaurantDiv);
+              });
+            } else {
+              // If our results are 0; no businesses were returned by the JSON therefor we display on the page no results were found
+              $("#yelpArea").append("<h5>We discovered no results!</h5>");
+            }
+          });
+
+          $.ajax({
+            type: 'GET',
+            url: 'https://www.googleapis.com/youtube/v3/search',
+            data: {
+              key: 'AIzaSyA5QGk0Aszi91ubsph31l_NmGzzct6vL9s',
+              q: cityName,
+              part: 'snippet',
+              maxResults: 1,
+              type: 'video',
+              chart: 'mostPopular',
+              videoEmbeddable: true,
+            },
+            error: function (response) {
+              $("youTubeArea").append("<h5>Request Failed</h5>");
+            }
+          }).then(function (response) {
+            console.log(response);
+
+            $('iframe').attr('src', 'https://www.youtube.com/embed/' + response.items[0].id.videoId);
+            $("#youTubeArea").append("<h3>" + response.items[0].snippet.title + "</h3>")
+              .append("<p>" + response.items[0].snippet.description + "</p>");
+
+          });
         });
 
-        $.ajax({
-          type: 'GET',
-          url: 'https://www.googleapis.com/youtube/v3/search',
-          data: {
-            key: 'AIzaSyA5QGk0Aszi91ubsph31l_NmGzzct6vL9s',
-            q: cityName,
-            part: 'snippet',
-            maxResults: 1,
-            type: 'video',
-            chart: 'mostPopular',
-            videoEmbeddable: true,
-          },
-          error: function (response) {
-            $("youTubeArea").append("<h5>Request Failed</h5>");
-          }
-        }).then(function (response) {
-          console.log(response);
+        function addToItinerary() {
 
-          $('iframe').attr('src', 'https://www.youtube.com/embed/' + response.items[0].id.videoId);
-          $("#youTubeArea").append("<h3>" + response.items[0].snippet.title + "</h3>")
-          .append("<p>" + response.items[0].snippet.description + "</p>");
+          var name = $(this).attr("name-val");
+          var phone = $(this).attr("phone-val");
+          var address = $(this).attr("address-val");
+          var city = $(this).attr("city-val");
+          var state = $(this).attr("state-val");
+          var zipCode = $(this).attr("zip-val");
 
-        });
+          localStorage.setItem("name", name);
+          localStorage.setItem("phone", phone);
+          localStorage.setItem("address", address);
+          localStorage.setItem("city", city);
+          localStorage.setItem("state", state);
+          localStorage.setItem("zipCode", zipCode);
+
+          var newRow = $("<tr>").append(
+            $("<td>").text(localStorage.getItem("name")),
+            $("<td>").text(localStorage.getItem("phone")),
+            $("<td>").text(localStorage.getItem("address")),
+            $("<td>").text(localStorage.getItem("city")),
+            $("<td>").text(localStorage.getItem("state")),
+            $("<td>").text(localStorage.getItem("zipCode")),
+            $("<td>").append('<button type="delete" class="btn btn-default btn-sm">Delete</button>')
+          )
+            .addClass("restaurantRow");
+
+          $("#itinerary-table").append(newRow);
+        };
+
+        $(document).on("click", ".restaurant", addToItinerary);
+
+
+        $(".btn-default").on("click", function (event) { 
+          event.preventDefault();
+          $(this).parents("tr").remove();
+        })
+        
       });
-    });
+      var newRow = $("<tr>").append(
+        $("<td>").text(localStorage.getItem("name")),
+        $("<td>").text(localStorage.getItem("phone")),
+        $("<td>").text(localStorage.getItem("address")),
+        $("<td>").text(localStorage.getItem("city")),
+        $("<td>").text(localStorage.getItem("state")),
+        $("<td>").text(localStorage.getItem("zipCode")),
+        $("<td>").append('<button type="delete" class="btn btn-default btn-sm">Delete</button>')
+      )
+        .addClass("restaurantRow");
 
+      $("#itinerary-table").append(newRow);
 
-  </script>
+    </script>
 </body>
 
 </html>
