--- a/index.html
+++ b/index.html
@@ -2,22 +2,15 @@
 <html>
 
 <head>
-  <!--Firebase-->
-  <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <!--Import materialize.css-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
-  <!--Import boostrap-->
+  <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-
-  <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<!--Main Body of App-->
 
 <body id="background">
   <div class="jumbotron jumbotron-fluid">
@@ -42,16 +35,16 @@
     </button>
   </div>
 
+
+  <!--div area where information from API's will appear-->
   <div id="yelpArea"></div>
   <div id="youTubeArea"></div>
   <iframe src=""></iframe>
 
+  <!--itinerary table container-->
   <div id="itineraryArea" class="container">
-
     <div class="row">
-
       <div class="col-md-12">
-
         <div class="card text-white border-danger mb-4">
           <h5 class="card-header bg-danger">Current Itinerary</h5>
           <div class="card-body text-danger">
@@ -75,32 +68,52 @@
       </div>
     </div>
 
-    <!-- JQuery -->
+
     <script src="https://code.jquery.com/jquery.js"></script>
 
-    <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
+
+
+
       $(document).ready(function () {
+
         $('iframe').hide();
 
-        //FIREBASE
-        var firebaseConfig = {
-          apiKey: "AIzaSyDv9dMSDCor976Qup3qF1USq3dSp14_o2E",
-          authDomain: "first-group-project-4f015.firebaseapp.com",
-          databaseURL: "https://first-group-project-4f015.firebaseio.com",
-          projectId: "first-group-project-4f015",
-          storageBucket: "first-group-project-4f015.appspot.com",
-          messagingSenderId: "1061347447826",
-          appId: "1:1061347447826:web:95b80b9ddc87a63ddd74cb",
-          measurementId: "G-3TR0M63K7P"
-        };
+        //function that adds itinerary row to the table
+        function renderItineraries(itineraries) {
+          $('#itinerary-table tbody').empty();
 
-        //Firebase initialize
-        firebase.initializeApp(firebaseConfig);
+          for (var i = 0; i < itineraries.length; i++) {
+            var newRow = $("<tr>").append(
+              $("<td>").text(itineraries[i].name),
+              $("<td>").text(itineraries[i].phone),
+              $("<td>").text(itineraries[i].address),
+              $("<td>").text(itineraries[i].city),
+              $("<td>").text(itineraries[i].state),
+              $("<td>").text(itineraries[i].zipCode));
 
+            var deleteButton = $("<button>");
+            deleteButton.attr("data-itinerary", i)
+              .attr("type", "delete")
+              .addClass("deleteButton")
+              .text("Delete");
 
-        //Capture Button Click
+            newRow = newRow.append(deleteButton);
+            $("#itinerary-table").append(newRow);
+          }
+        }
+        //creates a variable that stores and parses information from localStorage
+        var itineraries = JSON.parse(localStorage.getItem("itineraries"));
+
+        //if statement that says if there is nothing in the variable itineraries, 
+        //then the the itineraries array will be empty
+        if (!itineraries) {
+          itineraries = [];
+        }
+        //calls renderItineraries function
+        renderItineraries(itineraries);
+
         $("#submitBtn").on("click", function (event) {
           event.preventDefault();
 
@@ -127,21 +140,21 @@
             data: { term: "restaurant", location: cityName, limit: "5" }
 
 
-            // callback is not necessary
+
           }).then(function (response) {
 
             console.log(response);
 
-            // Grab the results from the API JSON return
+
             var totalresults = response.total;
-            // If our results are greater than 0, continue
+
             if (totalresults > 0) {
-              // Display a header on the page with the number of results
 
-              // Itirate through the JSON array of 'businesses' which was returned by the API
+
               $.each(response.businesses, function (i, item) {
-                // Store each business's object in a variable
 
+
+                //I made a bunch of changes here with the attributes
                 var restaurantDiv = $("<div>")
                   .addClass("restaurant")
                   .attr("name-val", item.name)
@@ -176,9 +189,11 @@
                 restaurantDiv.append(phone);
                 restaurantDiv.append(ratingWithReviewCount);
                 $("#yelpArea").append(restaurantDiv);
+                //copy-paste down to here from the restaurantDiv, just in case
+
               });
             } else {
-              // If our results are 0; no businesses were returned by the JSON therefor we display on the page no results were found
+
               $("#yelpArea").append("<h5>We discovered no results!</h5>");
             }
           });
@@ -207,7 +222,7 @@
 
           });
         });
-
+        //created function to add to itinerary on table and localStorage
         function addToItinerary() {
 
           var name = $(this).attr("name-val");
@@ -217,48 +232,40 @@
           var state = $(this).attr("state-val");
           var zipCode = $(this).attr("zip-val");
 
-          localStorage.setItem("name", name);
-          localStorage.setItem("phone", phone);
-          localStorage.setItem("address", address);
-          localStorage.setItem("city", city);
-          localStorage.setItem("state", state);
-          localStorage.setItem("zipCode", zipCode);
+          var itinerary = {
+            name: name,
+            phone: phone,
+            address: address,
+            city: city,
+            state: state,
+            zipCode: zipCode
+          }
 
-          var newRow = $("<tr>").append(
-            $("<td>").text(localStorage.getItem("name")),
-            $("<td>").text(localStorage.getItem("phone")),
-            $("<td>").text(localStorage.getItem("address")),
-            $("<td>").text(localStorage.getItem("city")),
-            $("<td>").text(localStorage.getItem("state")),
-            $("<td>").text(localStorage.getItem("zipCode")),
-            $("<td>").append('<button type="delete" class="btn btn-default btn-sm">Delete</button>')
-          )
-            .addClass("restaurantRow");
+          itineraries.push(itinerary);
 
-          $("#itinerary-table").append(newRow);
+          renderItineraries(itineraries);
+
+          localStorage.setItem("itineraries", JSON.stringify(itineraries));
+
         };
 
+        //clicking on the restaurant div adds to the itinerary table and storage
         $(document).on("click", ".restaurant", addToItinerary);
 
-
-        $(".btn-default").on("click", function (event) { 
+        //clicking on the delete button in a row of the table deletes
+        //row on table and element in local storage
+        $(document).on("click", ".deleteButton", function () {
           event.preventDefault();
-          $(this).parents("tr").remove();
-        })
-        
-      });
-      var newRow = $("<tr>").append(
-        $("<td>").text(localStorage.getItem("name")),
-        $("<td>").text(localStorage.getItem("phone")),
-        $("<td>").text(localStorage.getItem("address")),
-        $("<td>").text(localStorage.getItem("city")),
-        $("<td>").text(localStorage.getItem("state")),
-        $("<td>").text(localStorage.getItem("zipCode")),
-        $("<td>").append('<button type="delete" class="btn btn-default btn-sm">Delete</button>')
-      )
-        .addClass("restaurantRow");
 
-      $("#itinerary-table").append(newRow);
+          var toDoNumber = $(this).attr("data-itinerary");
+
+          itineraries.splice(toDoNumber, 1);
+
+          renderItineraries(itineraries);
+          localStorage.setItem("itineraries", JSON.stringify(itineraries));
+        })
+
+      });
 
     </script>
 </body>
