fixed whatever needed improvements for final draft

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <!--Main Body of App-->
+
 <body id="background" class="col s12 m6" style="background-image:url(Assets/Images/backgroundPineapple.jpeg)">
 
   <div id="home" class="navbar-fixed">
@@ -58,7 +59,7 @@
       <li>
         <img src="Assets/Images/coffeandcomputer.jpeg" alt="coffee">
         <div class="caption center-align">
-          <h2 class="black-text">A New Way to Plan Your Trip</h2>
+          <h2 class="black-text ">A New Way to Plan Your Trip</h2>
         </div>
       </li>
       <li>
@@ -89,8 +90,8 @@
         <!-- Modal -->
         <div id="modal1" class="modal">
           <div class="modal-content">
-            <h4>Needs a City</h4>
-            <p>A valid city is required.</p>
+            <h4 class="teal-text text-accent-4">Needs a City</h4>
+            <p class="teal-text text-darken-4">*A valid city is required.</p>
           </div>
           <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-teal btn-flat">Got it</a>
@@ -98,24 +99,24 @@
         </div>
       </div>
     </div>
-    <button id="submitBtn" class="btn-small blue-grey modal-trigger accent-2 waves-effect waves-light card_travel"
+    <button id="submitBtn" class="btn-small blue-grey accent-2 waves-effect waves-light card_travel"
       href="#modal1" type="submit" name="action">Search<i class="material-icons right">restaurant</i>
     </button>
   </div>
   <div class="container">
     <div class="row">
       <div class="col s12 m5">
-        <div id="reviews" class="rev">Top Reviews</div>
+        <div id="reviews" class="header">Top Reviews</div>
         <p id="instructions">Click a restaurant to add to your itinerary.</p>
         <div class="left-align" id="yelpArea"></div>
       </div>
       <div class="col s12 m7 center-align">
-        <h2 id="videoHeader">Destination Video</h2>
+        <div id="videoHeader" class="header">Destination Video</div>
         <iframe id="iframe" src="" width="480" height="350"></iframe>
         <div id="youTubeArea"></div>
         <!--itinerary table container-->
         <div id="itineraryArea">
-          <div class="card">
+          <div id="itinerary" class="card">
             <h5 class="card-header center-align lime darken-2 accent-2">Itinerary</h5>
             <div class="card-body lime lighten-5">
               <table class="responsive-table highlight table-hover" id='itinerary-table'>
@@ -150,5 +151,4 @@
   © 2020 Copyright
 
 </footer>
-
 </html>
